# Kotxesitua

./: CMakeLists.txt  README.md
cmake/: raspberrypi.cmake
dep/: CMakeLists.txt
dep/wiringPi/: CMakeLists.txt
mapa_sortzailea/: CMakeLists.txt
mapa_sortzailea/src/: CMakeLists.txt  funtzioak_binario_artxiboa.c  funtzioak_binario_artxiboa.h  main.c  mapa_editatu_eta_sortu.c  mapa_editatu_eta_sortu.h  menu.c  menu.h
src/: CMakeLists.txt  apunteak_defentsa  dijkstra.c  dijkstra.h  hardware.c  hardware.h  includes.h  input.c  input.h  kotxea.c  kotxea.h  main.c
